# milkymist

./: .gitignore  .gitmodules  Makefile  README  build_binkit_ml401.sh  build_binkit_one.sh  build_binkit_sp3aevl.sh  build_bios.sh  build_bitstream.sh  build_demo.sh  build_doc.sh  build_dockit.sh  build_sdk.sh  clean_all.sh  clean_binkit.sh  clean_kits.sh  coredoc.inc  flash_bios.sh  flash_bitstream.sh  load_bitstream.sh  load_demo.sh  setup.inc
mtk/sample/: CMakeLists.txt  environmentsdl.cpp  environmentsdl.h  languageapp.cpp  languageapp.h  main.cpp  menuapp.cpp  menuapp.h  regionpurefb.cpp  regionpurefb.h  sampleappfactory.cpp  sampleappfactory.h  screenpurefb.cpp  screenpurefb.h  timersdl.cpp  timersdl.h
mtk/sample/resources/: LICENSE
mtk/sample/resources/locale-src/: compile.sh  fr.po  init.sh  zh.po  (+2 more)
mtk/src/: CMakeLists.txt  application.cpp  colormodel.cpp  colorschema.cpp  combo.cpp  container.cpp  dc.cpp  environment.cpp  eventcallback.cpp  events.cpp  focus.cpp  focusable.cpp  fontrenderer.cpp  fontschema.cpp  icon.cpp  iconregistry.cpp  label.cpp  linearcontainer.cpp  padder.cpp  parabolicpath.cpp  pngloader.cpp  region.cpp  regionpathgroup.cpp  screen.cpp  selcontainer.cpp  selcontainergroup.cpp  separator.cpp  widget.cpp  window.cpp
projectm/: CMakeLists.txt  PCM.c  PCM.h  beat_detect.c  beat_detect.h  builtin_funcs.c  builtin_funcs.h  common.h  custom_shape.c  custom_shape.h  custom_shape_types.h  custom_wave.c  custom_wave.h  custom_wave_types.h  eval.c  eval.h  event.h  expr_types.h  fatal.h  fftsg.h  func.c  func.h  func_types.h  init_cond.c  main.c  param.c  param.h  param_types.h  parser.c  parser.h  pbuffer.c  pbuffer.h  per_frame_eqn.c  per_pixel_eqn.c  per_pixel_eqn.h  preset.c  preset.h  preset_types.h  projectM.c  projectM.h  (+9 more)
(+1288 files in other folders)
